# access-om3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ChangeLog.md  README.md  build.sh
.github/ISSUE_TEMPLATE/: parameter-testing.yml
.github/workflows/: compilation.yml
CDEPS/: CMakeLists.txt  cdeps_files.cmake
CDEPS/extra_sources/: atm_comp_nuopc.F90  datm.streams.xml  datm_datamode_jra55do_mod.F90  datm_datamode_jra_mod.F90  drof.streams.xml
CDEPS/patches/: atm_comp_nuopc.F90.patch  dshr_mod.F90.patch
CDEPS/share/: shr_frz_mod.F90
CICE/: CMakeLists.txt  cice_files.cmake
CICE/patches/: ice_comp_nuopc.F90.patch  ice_distribution.F90.patch  ice_domain.F90.patch  ice_init.F90.patch  ice_mesh_mod.F90.patch
CMEPS/: CMakeLists.txt
CMEPS/patches/: med_phases_history_mod.F90.patch  med_phases_profile_mod.F90.patch
MOM6/: CMakeLists.txt  generic_tracer_nuopc.md  mom6_files.cmake
MOM6/extra_sources/: mom_cap.F90  mom_cap_gtracer_flux.F90
MOM6/patches/: MOM_PointAccel.F90.patch  MOM_coupler_types.F90.patch  MOM_couplertype_infra.F90.patch  MOM_forcing_type.F90.patch  MOM_generic_tracer.F90.patch  MOM_io_infra.F90.patch  MOM_kappa_shear.F90.patch  mom_cap.F90.patch  mom_cap_methods.F90.patch  mom_ocean_model_nuopc.F90.patch
WW3/: CMakeLists.txt  ww3_files.cmake
WW3/cmake/: check_switches.cmake
WW3/patches/: w3iorsmd.F90.patch  w3srcemd.F90.patch  w3wavemd.F90.patch  wav_comp_nuopc.F90.patch
cmake/: AccessOM3Config.cmake.in  AddPatchedSource.cmake  CMakePresets-compilers.json  CMakePresets-defaults.json  CMakePresets-machines.json  FindFoX.cmake  FindNetCDF.cmake  FindPIO.cmake  FortranLib.cmake  PatchFile.cmake
share/: CMakeLists.txt
share/patches/: nuopc_shr_methods.F90.patch  shr_const_mod.F90.patch  shr_reprosum_mod.F90.patch
share/src/: mct_mod.F90  perf_mod.F90  shr_assert_mod.F90  shr_frz_mod.F90  shr_infnan_mod.F90
